# ClankRoboticsPlatform

./: .gitignore  README.md
clank/: CMakeLists.txt  README
clank/SAM/: HardwareDaemon.ino  makeAndUpload.sh  makeBin.sh
clank/SAM/libs/: AdcPin.c  AdcPin.h  GpioPin.c  GpioPin.h  PwmPin.c  PwmPin.h  Types.h
clank/config/: TeleoperatedConfig.config
clank/lib/: CMakeLists.txt
clank/lib/communication/: CMakeLists.txt  Command.cpp  Command.hpp  TcpServer.cpp  TcpServer.hpp
clank/lib/configuration/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  IndentedFileConfigurationReader.cpp  IndentedFileConfigurationReader.hpp
clank/lib/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake  config.status  libtool  sample10_unittest  sample1_unittest  sample2_unittest  sample3_unittest  sample4_unittest  sample5_unittest  sample6_unittest  sample7_unittest  sample8_unittest  sample9_unittest
clank/lib/gtest/samples/: sample1.cc
clank/lib/hardware/: AdcPin.cpp  AdcPin.hpp  CMakeLists.txt  GpioPin.cpp  GpioPin.hpp  GpioTypes.hpp  PwmPin.cpp  PwmPin.hpp  SamPeripheral.cpp  SamPeripheral.hpp  SamPeripheralExtentions.cpp  SamPeripheralExtentions.hpp  SamPeripheralManager.cpp  SamPeripheralManager.hpp  SamSerialPort.cpp  SamSerialPort.hpp
clank/lib/messages/: CMakeLists.txt  dummy.cpp
clank/lib/module/: CMakeLists.txt
clank/lib/module/DifferentialDriveModule/: CMakeLists.txt  DifferentialDriveModule.cpp  DifferentialDriveModule.hpp
clank/lib/module/VideoStreamer/: VideoStreamer.cpp  VideoStreamer.hpp
clank/lib/module/VideoStreamer/mjpg-streamer/: mjpg_streamer  start.sh
clank/lib/module/VideoStreamer/mjpg-streamer/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/input_control/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/input_file/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/input_gspcav1/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/input_testpicture/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/input_testpicture/pictures/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/input_uvc/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_autofocus/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_file/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_file/examples/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_http/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_rtsp/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_udp/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/plugins/output_viewer/.svn/: all-wcprops  entries
clank/lib/module/VideoStreamer/mjpg-streamer/scripts/.svn/: entries
clank/lib/module/VideoStreamer/mjpg-streamer/www/.svn/: all-wcprops  entries
clank/lib/motor/: CMakeLists.txt  IMotor.hpp
clank/lib/motor/ClawMotor/: ClawMotor.cpp  ClawMotor.hpp  ClawMotorController.cpp  ClawMotorController.hpp
clank/lib/motor/LiteMotor/: LiteMotor.cpp  LiteMotor.hpp
clank/lib/motor/VHN2Motor/: VHN2Motor.cpp  VHN2Motor.hpp
clank/lib/navigation/: CMakeLists.txt  IMap.hpp  IObstacle.hpp  IObstaclePlane.hpp  IPathPlanner.hpp  LineOfSightPathPlanner.cpp  LineOfSightPathPlanner.hpp  Obstacle.cpp  Obstacle.hpp  ObstaclePlane.cpp  ObstaclePlane.hpp  SparseMap.cpp  SparseMap.hpp
clank/lib/robot/: CMakeLists.txt  TeleoperatedRobot.cpp  TeleoperatedRobot.hpp
clank/lib/timers/: CMakeLists.txt  Watchdog.cpp  Watchdog.hpp
clank/lib/types/: CMakeLists.txt
clank/lib/types/navigation/: CSpacePoint.cpp  CSpacePoint.hpp  MapPrecision.hpp
clank/lib/visualization/: CMakeLists.txt
clank/lib/visualization/navigation/: MapPlotter.py
clank/src/: CMakeLists.txt  StartTeleoperatedRobot.cpp
clank/unitTests/: CMakeLists.txt  RunAllUnitTests.sh
clank/unitTests/lib/: CMakeLists.txt
clank/unitTests/lib/configuration/: CMakeLists.txt  ConfigurationUnitTest.cpp  IndentedFileConfigurationReaderUnitTest.cpp  IndentedFileConfigurationReaderUnitTestInput_BadTagFormatting.txt  IndentedFileConfigurationReaderUnitTestInput_BadValueFormatting.txt  IndentedFileConfigurationReaderUnitTestInput_HighlyIndented.txt  IndentedFileConfigurationReaderUnitTestInput_MultiLineGood.txt  IndentedFileConfigurationReaderUnitTestInput_MultipleTopLevelTags.txt
clank/unitTests/lib/navigation/: CMakeLists.txt  SparseMapTest.cpp
clank/unitTests/lib/timers/: CMakeLists.txt  WatchdogUnitTest.cpp
clank/util/: CMakeLists.txt
clank/util/lib/: CMakeLists.txt
clank/util/lib/hardware/: AdcTest.cpp  CMakeLists.txt  GpioTest.cpp  PwmTest.cpp
clank/util/lib/motor/: CMakeLists.txt  ClawMotorTest.cpp  LiteMotorTest.cpp
clank/util/lib/navigation/: CMakeLists.txt  Test2DMapVisualization.cpp
frontend/.recommenders/caches/: identified-project-coordinates.json
frontend/.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/: _remote.repositories  resolver-status.properties
frontend/.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/: _remote.repositories  resolver-status.properties
frontend/ClankTeleoperationFrontend/: .classpath  .project
frontend/ClankTeleoperationFrontend/src/clankTeleoperationFrontEnd/: Common.java  ControllerPoller.java  IControllerCommandMapping.java  MainWindow.java  NetworkManager.java  TeleoperatedControllerCommandMapping.java
frontend/Dependencies/jinput/archive/coreAPI/apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
frontend/Dependencies/jinput/archive/coreAPI/apidocs/net/java/games/input/: AbstractComponent.html  AbstractController.html  Component.Identifier.Key.html  (+20 more)
(+2 files in other folders)
